add instructions to demo page

--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
 
 <body>
     
-    <div>Draw Great Circle Arcs with Leaflet 
-      <a href="https://github.com/springmeyer/arc.js">source code on github</a>
-    </div>
+    <div style="padding:20px;">
+      <h3>Draw Great Circle Arcs with Leaflet</h3> 
+      <p>Single clicks on the map will plot points. Once you have drawn two points a great circle arc (curved path) should automatically be drawn between the first point and the second.</p>
+      <p><a href="https://github.com/springmeyer/arc.js">source code on github</a></p>
     
     <div id="map" style="width: 600px; height: 400px"></div>
+
+    </div>
 
     <script>
         var map = new L.Map('map');
