--- a/bezier.html
+++ b/bezier.html
@@ -30,7 +30,7 @@
           .zoomRange([0, 9])
           .zoom(3)
           .center({ lat: 0, lon: 0 })
-          .add(po.image().url("http://c.tiles.mapbox.com/v3/tmcw.map-hehqnmda/{Z}/{X}/{Y}.png"))
+          .add(po.image().url("http://c.tiles.mapbox.com/v3/tmcw.map-cx8atc2i/{Z}/{X}/{Y}.png"))
           .add(po.interact());
 
       var lines = po.geoJson();
