--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
     <style>
 
       body {
-        margin:40px auto;
+        margin:10px auto;
         width:90%;
         font:14px/20px 'Helvetica';
       }
 
       #map {
+        border: 1px solid;
         width:  100%;
-        height: 500px;
+        height: 420px;
         margin: 10px auto;
       }
 
@@ -36,14 +37,14 @@
 
     <div>
       <h3>Arc.js with Leaflet</h3> 
-      <p>Single clicks on the map will plot points. Once you have drawn two points a great circle arc (curved path) should automatically be drawn between the first point and the second. All drawn lines are collected as GeoJSON below the map.</p>
+      <p>Single clicks on the map will plot points. Once you have drawn two points a great circle arc (curved path) should automatically be drawn between the first point and the second. Nearby clicks will be snapped to existing start/end points. Click on the lines to get details. All drawn lines are collected as GeoJSON below the map.</p>
       <p><a href="https://github.com/springmeyer/arc.js">source code on github</a></p>
     </div>
 
     <div id="map"></div>
 
     <div id="geojson">
-    <textarea id="json-dump"> foo</textarea>
+    <textarea id="json-dump"></textarea>
     </div>
 
     <script>
