--- a/index.html
+++ b/index.html
@@ -150,7 +150,6 @@
           draw(coords);
         }
 
-        // debugging: adding points manually
         function add(s,e) {
             var start_ll = new L.LatLng(s[1],s[0]);
             var end_ll = new L.LatLng(e[1],e[0]);
@@ -171,9 +170,11 @@
                 }
             }).addTo(map);
         }
-        add([-74.564208984375,-0.17578097424708533],[137.779541015625,-22.75592068148639])
-        add([-66.829833984375,-18.81271785640776],[118.795166015625,-20.797201434306984])
-        add([114.576416015625,-44.21370990970204],[-65.423583984375,-43.19716728250127])
+        // debugging: adding points manually
+        //add([-74.564208984375,-0.17578097424708533],[137.779541015625,-22.75592068148639])
+        //add([-66.829833984375,-18.81271785640776],[118.795166015625,-20.797201434306984])
+        // trouble
+        //add([114.576416015625,-44.21370990970204],[-65.423583984375,-43.19716728250127])
     </script>
 </body>
 </html>
