--- a/index.html
+++ b/index.html
@@ -9,31 +9,36 @@
     <style>
 
       body {
-        margin:10px auto;
-        width:90%;
-        font:14px/20px 'Helvetica';
+        margin: 0px;
+        padding: 0px;
+        font:12px/15px 'Helvetica';
+      }
+
+      #text {
+        padding-left: 40px;
+        display:inline-block;
       }
 
       #map {
-        border: 1px solid;
-        width:  100%;
-        height: 420px;
-        margin: 10px auto;
+        float: left;
+        width: 70%;
+        height: 700px;
       }
 
       #json-dump {
-        width: 100%;
-        height: 100px;
+        float:right;
+        width:  28%;
+        margin: 0px;
+        padding: 0px;
+        height: 650px;
       }
 
     </style>
 </head>
 <body>
 
-    <div>
-      <h3>Arc.js with Leaflet</h3> 
-      <p>Single clicks on the map will plot points. Once you have drawn two points a great circle arc (curved path) should automatically be drawn between the first point and the second. Nearby clicks will be snapped to existing start/end points. Click on the lines to get details. All drawn lines are collected as GeoJSON below the map.</p>
-      <p><a href="https://github.com/springmeyer/arc.js">source code on github</a></p>
+    <div id="text">
+      <h3><a href="https://github.com/springmeyer/arc.js">Arc.js with Leaflet</a>: click to plot arcs</h3> 
     </div>
 
     <div id="map"></div>
@@ -53,7 +58,7 @@
         var url = 'http://{s}.tiles.mapbox.com/v3/springmeyer.map-7jkxlsx1/{z}/{x}/{y}.png'
         var osm = new L.TileLayer(url, {maxZoom: 17, attribution: attribution, noWrap:true});
         
-        map.setView(new L.LatLng(0, 0), 1).addLayer(osm);
+        map.setView(new L.LatLng(0, 0), 2).addLayer(osm);
         
         // number of intermediate arc points
         var npoints = 100;
